using System;
using System.Collections.Generic;

namespace grpcserv1
{
    public partial class TrainingResult4
    {
        public int? KodObject { get; set; }
        public int? Type1 { get; set; }
        public int? Type2 { get; set; }
        public float? Type1Value { get; set; }
        public float? Type2Min { get; set; }
        public float? Type2Max { get; set; }
    }
}
